# fulytic-logic

./: Cargo.toml  LICENSE
app/client/: Cargo.toml  build.rs
app/client/src/: main.rs  style.rs  system.rs
app/client/src/main_menu/: component.rs  mod.rs  system.rs
app/server/: Cargo.toml
app/server/src/: main.rs  server.rs
client/: Cargo.toml
fulytic-core/: Cargo.toml
fulytic-core/locales/: app.toml
fulytic-core/src/: codec.rs  join.rs  lib.rs  message.rs  player.rs
fulytic-core/src/codec/: bufqueue.rs  mod.rs
fulytic-core/src/game/: limit.rs  mod.rs
fulytic-macro/: Cargo.toml
fulytic-macros/: Cargo.toml
games/fulytic-othello/: Cargo.toml
games/fulytic-othello/langs/: EN.toml  JA.toml
games/fulytic-othello/src/: lib.rs
games/fulytic-othello/src/c2s/: login.rs  mod.rs  select.rs
games/fulytic-othello/src/s2c/: login.rs  mod.rs
server/: Cargo.toml
server/src/: client.rs  main.rs  server.rs
src/: client.rs  create.rs  game.rs  lib.rs
