[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
fulytic-logic = { path = "../", features = ["bevy"] }

log = { workspace = true, features = [
    "max_level_debug",
    "release_max_level_warn",
] }
pretty_env_logger = "0.5"

bevy.workspace = true
tokio.workspace = true
bytes.workspace = true
uuid.workspace = true
serde.workspace = true

[lints]
workspace = true
