[package]
name = "fulytic-core"
version.workspace = true
edition.workspace = true

[dependencies]
enum-table.workspace = true
local-fmt.workspace = true

ambassador.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
bytes.workspace = true
bincode.workspace = true
async-trait.workspace = true
log.workspace = true
tokio.workspace = true
