[package]
name = "fulytic-client"
version.workspace = true
edition.workspace = true

[dependencies]
fulytic-logic = { path = "../../", features = ["bevy"] }

pretty_env_logger = "0.5"

bevy.workspace = true
log.workspace = true
tokio.workspace = true
bytes.workspace = true
uuid.workspace = true
serde.workspace = true

[lints]
workspace = true
