[package]
name = "fulytic-othello"
version.workspace = true
edition.workspace = true

[dependencies]
fulytic-core.workspace = true

enum-table.workspace = true
local-fmt.workspace = true

ambassador.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
tokio.workspace = true
async-trait.workspace = true

[lints]
workspace = true
